--- a/build.gradle
+++ b/build.gradle
@@ -1,14 +1,14 @@
 buildscript {
-	ext {
-		springBootVersion = '1.5.6.RELEASE'
-	}
-	repositories {
-                maven { url 'http://maven.aliyun.com/nexus/content/groups/public' }
-		//mavenCentral()
-	}
-	dependencies {
-		classpath("org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}")
-	}
+    ext {
+        springBootVersion = '1.5.6.RELEASE'
+    }
+    repositories {
+        maven { url 'http://maven.aliyun.com/nexus/content/groups/public' }
+        //mavenCentral()
+    }
+    dependencies {
+        classpath("org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}")
+    }
 }
 
 apply plugin: 'java'
@@ -26,17 +26,22 @@ repositories {
 
 
 ext {
-	springCloudVersion = 'Dalston.SR3'
+    springCloudVersion = 'Dalston.SR3'
 }
 
 dependencies {
-	compile('org.springframework.cloud:spring-cloud-stream-binder-kafka')
-	compile('org.springframework.kafka:spring-kafka')
-	testCompile('org.springframework.boot:spring-boot-starter-test')
+    compile('org.springframework.boot:spring-boot-starter-web')
+//	compile('org.springframework.cloud:spring-cloud-stream-binder-kafka')
+//	compile('org.springframework.kafka:spring-kafka')
+    compile 'org.apache.kafka:kafka-clients:0.10.0.0'
+    compile 'org.projectlombok:lombok:1.16.18'
+    compile 'com.google.guava:guava:23.0'
+    compile 'org.apache.commons:commons-lang3:3.6'
+    testCompile('org.springframework.boot:spring-boot-starter-test')
 }
 
 dependencyManagement {
-	imports {
-		mavenBom "org.springframework.cloud:spring-cloud-dependencies:${springCloudVersion}"
-	}
+    imports {
+        mavenBom "org.springframework.cloud:spring-cloud-dependencies:${springCloudVersion}"
+    }
 }
